Countris selection on the band interface, and improve of the current Models. Much cleaner than before.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/app/Plugin/TwigView
+
 # User specific & automatically generated files #
 #################################################
 /app/Config/database.php
