--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@
    RewriteEngine on
    RewriteRule    ^$ app/webroot/    [L]
    RewriteRule    (.*) app/webroot/$1 [L]
+    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 </IfModule>
 
 php_value upload_max_filesize 100M
